[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/World.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Euro" type="Label" parent="."]
margin_left = 892.0
margin_right = 1004.0
margin_bottom = 26.0
rect_scale = Vector2( 1.16782, 1.11364 )
custom_fonts/font = SubResource( 1 )
text = "10 EUROS"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513, 300 )
current = true

[node name="Rock" type="Sprite" parent="." groups=["assembly_line_0", "objects", "rock"]]
modulate = Color( 0.505882, 0.305882, 0.741176, 1 )
position = Vector2( 128, 128 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Delivery" type="Node2D" parent="." groups=["delivery", "objects"]]
position = Vector2( 608, 448 )

[node name="Sprite" type="Sprite" parent="Delivery"]
modulate = Color( 0.196078, 1, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="EarnMoneyTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="EnnemySpawn1" type="Position2D" parent="."]
position = Vector2( 237, 449 )

[node name="EnnemySpawn2" type="Position2D" parent="."]
position = Vector2( 833, 449 )

[node name="EnnemySpawn3" type="Position2D" parent="."]
position = Vector2( 833, 75 )

[connection signal="build_object" from="Player" to="." method="player_builds_object"]
[connection signal="shoot" from="Player" to="." method="shoot"]
[connection signal="timeout" from="EarnMoneyTimer" to="." method="check_earnings"]
